--- a/src/css/order.css
+++ b/src/css/order.css
@@ -1,5 +1,6 @@
 div.order-wrap {
    flex: 1 5;
+   min-width: 300px;
 }
 
 ul.order {
@@ -11,7 +12,7 @@ ul.order li {
    border-bottom: 1px solid #000;
    padding: 2rem 0;
    display: flex;
-   font-size: 1.4rem;
+   font-size: 1.5rem;
    justify-content: space-between;
    align-items: center;
 }
@@ -22,7 +23,8 @@ ul.order li button {
    border: 0;
    display: none;
    line-height: 1;
-   padding: 0;
+   padding: 2px;
+   margin-right: 5px;
 }
 ul.order li.total {
    font-weight: 600;
@@ -32,9 +34,6 @@ ul.order li.total {
 ul.order li.unavailable {
    text-decoration: line-through;
    background: #fcc;
-}
-ul.order li .price {
-   font-size: 1.2rem;
 }
 ul.order li span.count {
    position: relative;
@@ -46,4 +45,14 @@ ul.order li span.count span {
 }
 .order-title {
    text-align: center;
+}
+.order-fish {
+   flex: 1;
+}
+.price {
+   font-weight: bolder;
+}
+.total {
+   display: flex;
+   justify-content: space-between;
 }
